--- a/public/style/Cards.css
+++ b/public/style/Cards.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 .answer:hover {
-    background-color: #E5F4F4;
+    filter: drop-shadow(1rem 1rem 1rem gray);
 }
 
 .card-empty {
@@ -108,6 +108,11 @@ h1 {
 
 #answer-draw-pile {
     box-shadow: 1.5px 1.5px rgba(136, 136, 136, 0.5);
+}
+
+#answer-draw-pile:hover {
+
+    filter: drop-shadow(1rem 1rem 1rem gray);
 }
 
 #question-draw-pile {
