--- a/public/style/Cards.css
+++ b/public/style/Cards.css
@@ -260,6 +260,10 @@ h1 {
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+.modal img {
+    width: 75%;
+}
+
 .modal .card {
     text-align:left;
     width: 7rem;
